chore: Reinstalar Materialize CSS con npm

--- a/package.json
+++ b/package.json
@@ -1,5 +1,23 @@
 {
   "dependencies": {
     "materialize-css": "^1.0.0-rc.2"
-  }
+  },
+  "name": "portafolio",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JSamuelAP/JSamuelAP.github.io.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JSamuelAP/JSamuelAP.github.io/issues"
+  },
+  "homepage": "https://github.com/JSamuelAP/JSamuelAP.github.io#readme",
+  "description": ""
 }
